# app/Models/User.php
@@ -20,6 +20,8 @@ class User extends Authenticatable
         'name',
         'email',
         'password',
+        'about',
+        'avatar'
     ];
 
     /**
